--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/modals": "^7.11.2",
+    "framer-motion": "^11.3.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
