--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.11.2",
     "@mantine/code-highlight": "^7.11.2",
     "@mantine/core": "^7.11.2",
     "@mantine/form": "^7.11.2",
