Changes Settings and vercel.json

--- a/backend-django/vercel.json
+++ b/backend-django/vercel.json
@@ -1,26 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "portfolio/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "disDir": "staticfiles_build"
-      }
-    }
-  ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/portfolio/wsgi.py"
+      "dest": "portfolio/wsgi.py"
     }
   ]
 }
