--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/modals": "^7.11.2",
+    "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
